# quickkv

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  mk
.github/workflows/: build.yml
artifacts/: README.md
data/: blog-posts.db  contact-list.db  data-file.db  users.db
docs/: github-action-plan.md
examples/: disk-read-write.cpp  multi-store.cpp  simple-kv.cpp
include/domainkeys/: base62.hpp  keys.hpp
include/quickkv/: quickkv.hpp
src/: keys.cpp  quickkv.cpp
tests/: keys_tests.cpp  main.cpp  quickkv_tests.cpp  test_helpers.hpp
